@@ -1,6 +1,7 @@
 PHP 4                                                                      NEWS
 |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
 ?? Jan 2004, Version 4.3.5
+- Fixed Bug #26927 (preg_quote() does not escape \0). (Ilia)
 - Fixed bug #26909 (crash in imap_mime_header_decode() when no encoding is 
   used). (Ilia)
 - Fixed bug #26878 (problem with multiple references to the same variable 
